--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -748,7 +748,7 @@
                     src="./image/100일미라클_표1_240125135413331.jpg"
                     alt=""
                   />
-                  <h2></h2>
+                  <h2>하와이 대저택 100일 미라클</h2>
                 </div>
                 <div class="slide-item">
                   <img src="./image/595x800_띠지_231114102821522.jpg" alt="" />
@@ -794,85 +794,91 @@
         </div>
       </div>
       <div class="content-youtube">
-        <div class="youtube-tit">
-          <h1>메가스터디북스 유튜브</h1>
-          <div class="btn">
-            <span class="left"
-              ><svg
-                width="36"
-                height="36"
-                viewBox="0 0 36 36"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M22.4551 17.9375L13.5043 8.9867"
-                  stroke="current"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M22.4551 18.0234L13.5043 26.9742"
-                  stroke="current"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </span>
-            <span class="right">
-              <svg
-                width="36"
-                height="36"
-                viewBox="0 0 36 36"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M22.4551 17.9375L13.5043 8.9867"
-                  stroke="#111111"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M22.4551 18.0234L13.5043 26.9742"
-                  stroke="#111111"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </span>
+        <div class="content-inner">
+          <div class="youtube-tit">
+            <h1>메가스터디북스 유튜브</h1>
+            <div class="btn">
+              <span class="left"
+                ><svg
+                  width="36"
+                  height="36"
+                  viewBox="0 0 36 36"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    class="svgLeftBtn"
+                    d="M22.4551 17.9375L13.5043 8.9867"
+                    stroke="#999999"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    class="svgLeftBtn"
+                    d="M22.4551 18.0234L13.5043 26.9742"
+                    stroke="#999999"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
+              <span class="right">
+                <svg
+                  width="36"
+                  height="36"
+                  viewBox="0 0 36 36"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    class="svgRightBtn"
+                    d="M22.4551 17.9375L13.5043 8.9867"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    class="svgRightBtn"
+                    d="M22.4551 18.0234L13.5043 26.9742"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
+            </div>
           </div>
+          <ul class="thumbnail">
+            <li>
+              <a href=""
+                ><img
+                  src="./image/2024__EC_B4_88_EB_93_B1_EC_98_81_EB_AC_B8_EB_B2_95-_EB_AC_B8_EC_9E_A5_EC_9D_98-_EC_9B_90_EB_A6_AC__EB_A9_94_EA_B0_80_EC_8A_A4_ED_84_B0_EB_94_94_240207152314880.jpg"
+                  alt=""
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./image/_EC_9C_A0_ED_8A_9C_EB_B8_8C_EC_98_81_EC_83_81_EC_8D_B8_EB_84_A4_EC_9D_BC_1280x720_231117175125320.png"
+                  alt=""
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./image/_EB_A9_94_EA_B0_80_EC_8A_A4_ED_84_B0_EB_94_94_20_EC_A1_B0_EC_A0_95_EC_8B_9D_20_EC_84_A0_EC_83_9D_EB_8B_98__EC_8D_B8_EB_84_A4_EC_9D_BC_231121111023191.png"
+                  alt=""
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./image/_EC_9C_A0_ED_8A_9C_EB_B8_8C_EC_98_81_EC_83_81_EC_8D_B8_EB_84_A4_EC_9D_BC_1280x720_02_231117175255873.png"
+                  alt=""
+              /></a>
+            </li>
+          </ul>
         </div>
-        <ul class="thumbnail">
-          <li>
-            <a href=""
-              ><img
-                src="./image/2024__EC_B4_88_EB_93_B1_EC_98_81_EB_AC_B8_EB_B2_95-_EB_AC_B8_EC_9E_A5_EC_9D_98-_EC_9B_90_EB_A6_AC__EB_A9_94_EA_B0_80_EC_8A_A4_ED_84_B0_EB_94_94_240207152314880.jpg"
-                alt=""
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./image/_EC_9C_A0_ED_8A_9C_EB_B8_8C_EC_98_81_EC_83_81_EC_8D_B8_EB_84_A4_EC_9D_BC_1280x720_231117175125320.png"
-                alt=""
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./image/_EB_A9_94_EA_B0_80_EC_8A_A4_ED_84_B0_EB_94_94_20_EC_A1_B0_EC_A0_95_EC_8B_9D_20_EC_84_A0_EC_83_9D_EB_8B_98__EC_8D_B8_EB_84_A4_EC_9D_BC_231121111023191.png"
-                alt=""
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./image/_EC_9C_A0_ED_8A_9C_EB_B8_8C_EC_98_81_EC_83_81_EC_8D_B8_EB_84_A4_EC_9D_BC_1280x720_02_231117175255873.png"
-                alt=""
-            /></a>
-          </li>
-        </ul>
       </div>
       <div class="content-event">
         <div class="event-tit">
