--- a/javascript/pureSite/index.html
+++ b/javascript/pureSite/index.html
@@ -8,12 +8,70 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
+    <div class="brand">
+      <ul>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_cjw-1.png" alt="brand01" />
+            <span>청정원</span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_homeings-1.png" alt="brand02" />
+            <span>호밍스</span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_anjuya-1.png" alt="brand03" />
+            <span>안주야 </span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_sunchang-1.png" alt="brand04" />
+            <span>순창</span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_curryqueen-1.png" alt="brand05" />
+            <span>카레여왕</span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_hatdam-1.png" alt="brand06" />
+            <span>햇살담은</span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_hongcho-1-1.png" alt="brand07" />
+            <span>홍초</span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_tasteteach-1.png" alt="brand08" />
+            <span>맛선생</span>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./img/nav_natural-1.png" alt="brand09" />
+            <span>순수천혜염</span>
+          </a>
+        </li>
+      </ul>
+    </div>
     <header>
       <div class="header-wrap">
         <div class="header-left">
           <div class="title"><img src="./img/logo.svg" alt="logo" /></div>
           <ul class="heaer-menu">
-            <li><a href="#">브랜드</a></li>
+            <li class="brandMenu"><a href="#">브랜드</a></li>
             <li><a href="#">제품</a></li>
             <li><a href="#">뉴스</a></li>
             <li><a href="#">고객센터</a></li>
@@ -38,7 +96,11 @@
       <div class="main-sec">
         <div class="sec-wrap">
           <div class="better">The Better</div>
-          <div class="middle"></div>
+          <div class="middle">
+            <img src="./img/ico_main_top_banner_left.svg" alt="" />
+            <img class="changeImg" src="./img/brand-main-img1.png" alt="" />
+            <img src="./img/ico_main_top_banner_right.svg" alt="" />
+          </div>
           <div class="life">
             <div class="life-inner">
               <span class="go"><img src="" alt="" /></span>
