--- a/profile/index.html
+++ b/profile/index.html
@@ -214,186 +214,199 @@
               <div class="inner colors"></div>
             </span>
             <div class="section-inner clone-modal-inner">
-              <div class="modalScreen">
-                <div class="modalScreenInner colors">
-                  <div class="cloneWeb">
-                    <img src="./img/cloneProjectthumnail.png" alt="" />
+              <div class="modalback">
+                <div class="modalScreen">
+                  <div class="modalScreenInner colors">
+                    <div class="cloneWeb">
+                      <img src="./img/cloneProjectthumnail.png" alt="" />
+                    </div>
+                    <div class="project-text">
+                      <ul class="clone-desc">
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 종류
+                          </div>
+                          <p>개인 프로젝트</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >제작 기간
+                          </div>
+                          <p>2024.04.03~2024.04.23</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >주요 기능
+                          </div>
+                          <p>HTML5 / CSS / Javascript</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 과정
+                          </div>
+                          <p>
+                            흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된
+                            것
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                    <span class="modalCloseBtn"
+                      ><i class="fa-solid fa-xmark colorstext"></i
+                    ></span>
+                    <a class="viewMore colors" href="">View More</a>
                   </div>
-                  <div class="project-text">
-                    <ul class="clone-desc">
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 종류
-                        </div>
-                        <p>개인 프로젝트</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >제작 기간
-                        </div>
-                        <p>2024.04.03~2024.04.23</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >주요 기능
-                        </div>
-                        <p>HTML5 / CSS / Javascript</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 과정
-                        </div>
-                        <p>
-                          흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된 것
-                        </p>
-                      </li>
-                    </ul>
-                  </div>
-                  <span class="modalCloseBtn"
-                    ><i class="fa-solid fa-xmark colorstext"></i
-                  ></span>
-                  <a class="viewMore colors" href="">View More</a>
                 </div>
               </div>
-              <div class="modalScreen">
-                <div class="modalScreenInner colors">
-                  <div class="cloneWeb">
-                    <img src="./img/cloneProjectthumnail.png" alt="" />
+              <div class="modalback">
+                <div class="modalScreen">
+                  <div class="modalScreenInner colors">
+                    <div class="cloneWeb">
+                      <img src="./img/cloneProjectthumnail.png" alt="" />
+                    </div>
+                    <div class="project-text">
+                      <ul class="clone-desc">
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 종류
+                          </div>
+                          <p>개인 프로젝트</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >제작 기간
+                          </div>
+                          <p>2024.04.03~2024.04.23</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >주요 기능
+                          </div>
+                          <p>HTML5 / CSS / Javascript</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 과정
+                          </div>
+                          <p>
+                            흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된
+                            것
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                    <span class="modalCloseBtn"
+                      ><i class="fa-solid fa-xmark colorstext"></i
+                    ></span>
+                    <a class="viewMore colors" href="">View More</a>
                   </div>
-                  <div class="project-text">
-                    <ul class="clone-desc">
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 종류
-                        </div>
-                        <p>개인 프로젝트</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >제작 기간
-                        </div>
-                        <p>2024.04.03~2024.04.23</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >주요 기능
-                        </div>
-                        <p>HTML5 / CSS / Javascript</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 과정
-                        </div>
-                        <p>
-                          흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된 것
-                        </p>
-                      </li>
-                    </ul>
-                  </div>
-                  <span class="modalCloseBtn"
-                    ><i class="fa-solid fa-xmark colorstext"></i
-                  ></span>
-                  <a class="viewMore colors" href="">View More</a>
                 </div>
               </div>
-              <div class="modalScreen">
-                <div class="modalScreenInner colors">
-                  <div class="cloneWeb">
-                    <img src="./img/cloneProjectthumnail.png" alt="" />
+              <div class="modalback">
+                <div class="modalScreen">
+                  <div class="modalScreenInner colors">
+                    <div class="cloneWeb">
+                      <img src="./img/cloneProjectthumnail.png" alt="" />
+                    </div>
+                    <div class="project-text">
+                      <ul class="clone-desc">
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 종류
+                          </div>
+                          <p>개인 프로젝트</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >제작 기간
+                          </div>
+                          <p>2024.04.03~2024.04.23</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >주요 기능
+                          </div>
+                          <p>HTML5 / CSS / Javascript</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 과정
+                          </div>
+                          <p>
+                            흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된
+                            것
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                    <span class="modalCloseBtn"
+                      ><i class="fa-solid fa-xmark colorstext"></i
+                    ></span>
+                    <a class="viewMore colors" href="">View More</a>
                   </div>
-                  <div class="project-text">
-                    <ul class="clone-desc">
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 종류
-                        </div>
-                        <p>개인 프로젝트</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >제작 기간
-                        </div>
-                        <p>2024.04.03~2024.04.23</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >주요 기능
-                        </div>
-                        <p>HTML5 / CSS / Javascript</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 과정
-                        </div>
-                        <p>
-                          흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된 것
-                        </p>
-                      </li>
-                    </ul>
-                  </div>
-                  <span class="modalCloseBtn"
-                    ><i class="fa-solid fa-xmark colorstext"></i
-                  ></span>
-                  <a class="viewMore colors" href="">View More</a>
                 </div>
               </div>
-              <div class="modalScreen">
-                <div class="modalScreenInner colors">
-                  <div class="cloneWeb">
-                    <img src="./img/cloneProjectthumnail.png" alt="" />
+              <div class="modalback">
+                <div class="modalScreen">
+                  <div class="modalScreenInner colors">
+                    <div class="cloneWeb">
+                      <img src="./img/cloneProjectthumnail.png" alt="" />
+                    </div>
+                    <div class="project-text">
+                      <ul class="clone-desc">
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 종류
+                          </div>
+                          <p>개인 프로젝트</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >제작 기간
+                          </div>
+                          <p>2024.04.03~2024.04.23</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >주요 기능
+                          </div>
+                          <p>HTML5 / CSS / Javascript</p>
+                        </li>
+                        <li>
+                          <div class="tit">
+                            <i class="fa-solid fa-chevron-right colorstext"></i
+                            >프로젝트 과정
+                          </div>
+                          <p>
+                            흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된
+                            것
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                    <span class="modalCloseBtn"
+                      ><i class="fa-solid fa-xmark colorstext"></i
+                    ></span>
+                    <a class="viewMore colors" href="">View More</a>
                   </div>
-                  <div class="project-text">
-                    <ul class="clone-desc">
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 종류
-                        </div>
-                        <p>개인 프로젝트</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >제작 기간
-                        </div>
-                        <p>2024.04.03~2024.04.23</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >주요 기능
-                        </div>
-                        <p>HTML5 / CSS / Javascript</p>
-                      </li>
-                      <li>
-                        <div class="tit">
-                          <i class="fa-solid fa-chevron-right colorstext"></i
-                          >프로젝트 과정
-                        </div>
-                        <p>
-                          흥미로웠던 기능, 어려웠던 점, 문제해결 과정, 얻게된 것
-                        </p>
-                      </li>
-                    </ul>
-                  </div>
-                  <span class="modalCloseBtn"
-                    ><i class="fa-solid fa-xmark colorstext"></i
-                  ></span>
-                  <a class="viewMore colors" href="">View More</a>
                 </div>
               </div>
+
               <ul>
                 <li class="modalList">
                   <div class="dew colors"></div>
