--- a/javascript/diary_React/react01/public/index.html
+++ b/javascript/diary_React/react01/public/index.html
@@ -31,7 +31,7 @@
   <body>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6a36218ac52f525d7b889092b1ea7c73"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_JAVA_KEY%"
     ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
