--- a/반응형 완성 배포/public/index.html
+++ b/반응형 완성 배포/public/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="box">
               <div class="dog">
-                <img src="./img/happydog.png" alt="" />
+                <img src="./img/shinee.png" alt="" />
               </div>
               <span>Dogs</span>
               <div class="viewmore">
