--- a/javascript/diary_React/react01/public/index.html
+++ b/javascript/diary_React/react01/public/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.jpg" />
+    <meta property="og:site_name" content="기환 & 다슬 결혼합니다" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="24년 9월 7일 오후 12시 20분 가천컨벤션센터 5층"
     />
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>React App</title>
+    <title>기환 & 다슬 결혼합니다</title>
   </head>
   <body>
     <script
