--- a/javascript/pureSite/index.html
+++ b/javascript/pureSite/index.html
@@ -102,12 +102,22 @@
             <img src="./img/ico_main_top_banner_right.svg" alt="" />
           </div>
           <div class="life">
-            <div class="life-inner">
-              <span class="go"><img src="" alt="" /></span>
-              <span class="letter">Life</span>
-              <span class="eat"></span>
-            </div>
+            <span class="letter">Life</span>
           </div>
+        </div>
+        <div class="sec-bottom">
+          <a
+            class="go"
+            href="https://www.chungjungone.com/gift-catalogue-2024/"
+          >
+            <span>설 선물세트 보러가기</span>
+            <img src="./img/catalogue2024.png" alt="catalogue" />
+          </a>
+
+          <span class="eat">
+            <span>Let's eat</span>
+            <img src="./img/ico_scroll.svg" alt="scroll"
+          /></span>
         </div>
       </div>
     </section>
