--- a/javascript/pureSite/index.html
+++ b/javascript/pureSite/index.html
@@ -120,6 +120,52 @@
           /></span>
         </div>
       </div>
+      <div class="middle-sec">
+        <ul>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">정원아,<br />오늘도 부탁해</div></a
+            >
+          </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">만족을<br />요리하다</div></a
+            >
+          </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">
+                안주야를 만나는 순간,<br />모든 것이 즐겁다.
+              </div></a
+            >
+          </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">맛있는<br />발효숙성</div></a
+            >
+          </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">여왕의 방식<br />프리미엄 카레</div></a
+            >
+          </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">두 번 달여<br />더 진한 진간장</div></a
+            >
+          </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">나를 위한<br />건강한 일상음료</div></a
+            >
+          </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">맛있는<br />자연재료</div></a
+            >
+          </li>
+        </ul>
+      </div>
     </section>
   </body>
 </html>
