--- a/javascript/diary_React/react01/public/index.html
+++ b/javascript/diary_React/react01/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>기환 & 다슬 결혼합니다</title>
+    <title>기환 & 다슬 결혼합니다.</title>
   </head>
   <body>
     <script
