--- a/javascript/diary_React/react01/public/index.html
+++ b/javascript/diary_React/react01/public/index.html
@@ -10,6 +10,7 @@
       property="og:description"
       content="24년 9월 7일 오후 12시 20분 가천컨벤션센터 5층"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,6 +28,22 @@
     -->
 
     <title>기환 & 다슬 결혼합니다.</title>
+    <script>
+      (function (j, ennifer) {
+        j["dmndata"] = [];
+        j["jenniferFront"] = function (args) {
+          window.dmndata.push(args);
+        };
+        j["dmnaid"] = ennifer;
+        j["dmnatime"] = new Date();
+        j["dmnanocookie"] = false;
+        j["dmnajennifer"] = "JENNIFER_FRONT@INTG";
+      })(window, "f92bcee4");
+    </script>
+    <script
+      async
+      src="https://d-collect.jennifersoft.com/f92bcee4/demian.js"
+    ></script>
   </head>
   <body>
     <script
