--- a/profile/index.html
+++ b/profile/index.html
@@ -456,20 +456,68 @@
               <div class="inner colors"></div>
             </span>
             <div class="section-inner">
-              <ul class="ex-menu">
-                <li class="colors">
-                  flex/grid 2<span class="active">flex/grid 2</span>
-                </li>
-                <li class="colors">flex/grid 2<span>flex/grid 2</span></li>
-                <li class="colors">flex/grid 2<span>flex/grid 2</span></li>
-                <li class="colors">flex/grid 2<span>flex/grid 2</span></li>
-                <li class="colors">flex/grid 2<span>flex/grid 2</span></li>
-              </ul>
-              <div class="ex-box">
-                <ul class="ex-box-wrap">
-                  <li></li>
-                  <li></li>
+              <div class="inner-wrap">
+                <ul class="ex-menu">
+                  <li class="colors">
+                    flex/grid <span class="active">flex/grid </span>
+                  </li>
+                  <li class="colors">Css<span>Css</span></li>
+                  <li class="colors">Javascript<span>Javascript</span></li>
+                  <li class="colors">React<span>React</span></li>
+                  <li class="colors">Typescript<span>Typescript</span></li>
                 </ul>
+                <div class="ex-box">
+                  <ul class="ex-box-wrap active">
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/flex.png" alt="flex" />
+                    </li>
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/grid.png" alt="flex" />
+                    </li>
+                  </ul>
+                  <ul class="ex-box-wrap">
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/flex.png" alt="flex" />
+                    </li>
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/grid.png" alt="flex" />
+                    </li>
+                  </ul>
+                  <ul class="ex-box-wrap">
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/flex.png" alt="flex" />
+                    </li>
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/grid.png" alt="flex" />
+                    </li>
+                  </ul>
+                  <ul class="ex-box-wrap">
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/flex.png" alt="flex" />
+                    </li>
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/grid.png" alt="flex" />
+                    </li>
+                  </ul>
+                  <ul class="ex-box-wrap">
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/flex.png" alt="flex" />
+                    </li>
+                    <li>
+                      <div class="colors"></div>
+                      <img src="./img/grid.png" alt="flex" />
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
