--- a/javascript/pureSite/index.html
+++ b/javascript/pureSite/index.html
@@ -8,65 +8,65 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <div class="brand">
-      <ul>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_cjw-1.png" alt="brand01" />
-            <span>청정원</span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_homeings-1.png" alt="brand02" />
-            <span>호밍스</span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_anjuya-1.png" alt="brand03" />
-            <span>안주야 </span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_sunchang-1.png" alt="brand04" />
-            <span>순창</span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_curryqueen-1.png" alt="brand05" />
-            <span>카레여왕</span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_hatdam-1.png" alt="brand06" />
-            <span>햇살담은</span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_hongcho-1-1.png" alt="brand07" />
-            <span>홍초</span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_tasteteach-1.png" alt="brand08" />
-            <span>맛선생</span>
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            ><img src="./img/nav_natural-1.png" alt="brand09" />
-            <span>순수천혜염</span>
-          </a>
-        </li>
-      </ul>
-    </div>
     <header>
+      <div class="brand">
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_cjw-1.png" alt="brand01" />
+              <span>청정원</span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_homeings-1.png" alt="brand02" />
+              <span>호밍스</span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_anjuya-1.png" alt="brand03" />
+              <span>안주야 </span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_sunchang-1.png" alt="brand04" />
+              <span>순창</span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_curryqueen-1.png" alt="brand05" />
+              <span>카레여왕</span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_hatdam-1.png" alt="brand06" />
+              <span>햇살담은</span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_hongcho-1-1.png" alt="brand07" />
+              <span>홍초</span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_tasteteach-1.png" alt="brand08" />
+              <span>맛선생</span>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./img/nav_natural-1.png" alt="brand09" />
+              <span>순수천혜염</span>
+            </a>
+          </li>
+        </ul>
+      </div>
       <div class="header-wrap">
         <div class="header-left">
           <div class="title"><img src="./img/logo.svg" alt="logo" /></div>
@@ -164,8 +164,52 @@
               <div class="middle-title">맛있는<br />자연재료</div></a
             >
           </li>
+          <li>
+            <a class="middle-main-img" href="#">
+              <div class="middle-title">프리미엄<br />천일염</div></a
+            >
+          </li>
         </ul>
       </div>
     </section>
+    <footer>
+      <div class="personal">
+        <span>개인정보처리방침</span>
+        <span>이메일무단수집거부</span>
+        <span>사이트맵</span>
+      </div>
+      <div class="logo-bottom">
+        <img src="./img/logo.svg" alt="logo" />
+      </div>
+      <div class="desc-bottom">
+        <p><span class="bar">대상(주)</span>사업자 등록번호:109-81-14886</p>
+        <p>
+          <span class="bar">대표이사:임정배</span>주소:서울시 종로구 창경궁로
+          120(인의동)
+        </p>
+        <p>제품관련 고객상담:080-019-9119</p>
+        <p>상담시간:평일 09:00~17:30(토, 일요일, 공휴일 휴무)</p>
+        <p>개인정보 보호책임자:윤한권</p>
+        <div class="social">
+          <a href="https://www.facebook.com/jungonestory" target="_blank"
+            ><img src="./img/ico_ft_facebook.svg" alt="facebook"
+          /></a>
+          <a
+            href="https://www.youtube.com/channel/UC0SI1QyV1HlA0aekZBouCWg"
+            target="_blank"
+            ><img src="./img/ico_ft_youtube.svg" alt="youtube"
+          /></a>
+          <a href="https://blog.naver.com/jungwondiary" target="_blank"
+            ><img src="./img/ico_ft_blog.svg" alt="blog"
+          /></a>
+          <a href="https://www.instagram.com/chungjungone/" target="_blank"
+            ><img src="./img/ico_ft_instargram.svg" alt="instagram"
+          /></a>
+        </div>
+        <div class="copyright">
+          COPYRIGHT<span>청정원.</span>ALL RIGHTS RESERVED.
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
