--- a/javascript/pureSite/public/index.html
+++ b/javascript/pureSite/public/index.html
@@ -69,39 +69,42 @@
       </div>
       <div class="header-wrap">
         <div class="header-left">
+          <div class="toggle-button">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="responsible-bg"></div>
           <div class="title"><img src="./img/logo.svg" alt="logo" /></div>
-          <ul class="heaer-menu">
+          <ul class="header-menu">
             <li class="brandMenu"><a href="#">브랜드</a></li>
             <li><a href="#">제품</a></li>
             <li><a href="#">뉴스</a></li>
             <li><a href="#">고객센터</a></li>
-            <div class="header-social">
-              <li>
+            <li>
+              <span class="header-social">
                 <a href="https://www.facebook.com/jungonestory" target="_blank"
                   ><img src="./img/ico_ft_facebook.svg" alt="facebook"
                 /></a>
-              </li>
-              <li>
+
                 <a
                   href="https://www.youtube.com/channel/UC0SI1QyV1HlA0aekZBouCWg"
                   target="_blank"
                   ><img src="./img/ico_ft_youtube.svg" alt="youtube"
                 /></a>
-              </li>
-              <li>
+
                 <a href="https://blog.naver.com/jungwondiary" target="_blank"
                   ><img src="./img/ico_ft_blog.svg" alt="blog"
                 /></a>
-              </li>
-              <li>
+
                 <a
                   href="https://www.instagram.com/chungjungone/"
                   target="_blank"
                   ><img src="./img/ico_ft_instargram.svg" alt="instagram"
                 /></a>
-              </li>
-            </div>
-            <span class="popup-btn"></span>
+              </span>
+            </li>
+            <li class="popup-btn"></li>
           </ul>
         </div>
 
