--- a/javascript/ggLibrary/public/index.html
+++ b/javascript/ggLibrary/public/index.html
@@ -31,6 +31,7 @@
               <p>회원가입</p>
             </span>
           </div>
+          <span><i class="fa-solid fa-x"></i></span>
         </div>
         <nav>
           <div class="nav-inner">
@@ -39,13 +40,25 @@
               <h1>경기도청 도서관</h1>
             </a>
             <div class="nav-menu">
-              <a href="">자료검색</a>
-              <a href="">큐레이션</a>
-              <a href="">도서관이용</a>
-              <a href="">나의도서관</a>
+              <span class="main-nav" href=""
+                >자료검색
+                <img class="arrow" src="./image/ico_nav_arrow.png" alt="arrow"
+              /></span>
+              <span class="main-nav" href=""
+                >큐레이션
+                <img class="arrow" src="./image/ico_nav_arrow.png" alt="arrow"
+              /></span>
+              <span class="main-nav" href=""
+                >도서관이용
+                <img class="arrow" src="./image/ico_nav_arrow.png" alt="arrow"
+              /></span>
+              <span class="main-nav" href=""
+                >나의도서관
+                <img class="arrow" src="./image/ico_nav_arrow.png" alt="arrow"
+              /></span>
               <div class="hidden-menu">
                 <div class="hidden-menu-inner">
-                  <div class="section01 sec">
+                  <div class="section01 sec active">
                     <a href="#">자료검색</a>
                   </div>
                   <div class="section02 sec">
