--- a/profile/index.html
+++ b/profile/index.html
@@ -51,6 +51,11 @@
       <section class="content">
         <div #id="home" class="section home">
           <div class="container">
+            <img
+              class="cloudAni"
+              src="./img/cloudanimation.png"
+              alt="cloudAnimation"
+            />
             <div class="title">
               <span class="top-text"
                 >High<span class="blue colorstext">SEUL</span></span
@@ -66,6 +71,11 @@
               </p>
             </div>
             <div class="img"></div>
+            <img
+              class="cloudAni"
+              src="./img/cloudanimation.png"
+              alt="cloudAnimation"
+            />
           </div>
         </div>
         <div #id="about" class="section about">
