--- a/profile/index.html
+++ b/profile/index.html
@@ -31,11 +31,20 @@
 
     <div class="wrap">
       <header class="colors">
-        <span class="logo"><a href="#">logo</a></span>
+        <div class="header-left">
+          <a class="logo" href="#"> HISEUL </a>
+          <div class="weather">
+            <img class="weatherImg" src="./img/Clear.png" alt="weather-image" />
+            <div>
+              <span class="temp"></span>
+              <span class="weather-desc"></span>
+            </div>
+          </div>
+        </div>
+
         <nav>
           <ul class="gnb">
             <li>Home</li>
-            <li>About</li>
             <li>Skill</li>
             <li>Project</li>
             <li>Example</li>
@@ -51,95 +60,105 @@
       <section class="content">
         <div #id="home" class="section home">
           <div class="container">
-            <img
-              class="cloudAni"
-              src="./img/cloudanimation.png"
-              alt="cloudAnimation"
-            />
             <div class="title">
-              <span class="top-text"
-                >High<span class="blue colorstext">SEUL</span></span
-              >
-              <span class="under-text">Portfolio</span>
+              <div class="hiseul">
+                <span class="top-text"
+                  >High<span class="blue colorstext">SEUL</span>
+                </span>
+                <span class="under-text">Portfolio</span>
+              </div>
               <p>
-                안녕하세요 더 높은 곳을 향해<br />
-                나아가고 싶은 김이슬입니다.
+                안녕하세요. 신입
+                <span class="point colorstext">디자이너</span>&<span
+                  class="point colorstext"
+                  >퍼블리셔</span
+                >를 꿈꾸는 김이슬입니다. 끈기있게 그리고 책임감을 갖고 한단계씩
+                성장해 나가는
+                <span class="point colorstext">웹 퍼블리셔</span>가 되기 위해
+                노력하겠습니다.
               </p>
-              <p class="description">
-                새롭게 시작하는 일에 아직은 궁금한 것이 많습니다. 더 많은 것을
-                천천히 배워나가고 싶습니다.
-              </p>
+              <div class="section-inner">
+                <ul>
+                  <li>
+                    <div class="card-horizontal">
+                      <div class="front">
+                        <div class="dew colors">
+                          <img src="./img/icon0.png" alt="" />
+                        </div>
+                        <div class="desc">
+                          <h3>국민대학교 신소재공학과 졸업</h3>
+                        </div>
+                      </div>
+                      <div class="back hori">
+                        <p>
+                          4년간의 대학생활을 통해 새로운 분야에 대한 탐구를
+                          지속할 수 있었습니다.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-vertical">
+                      <div class="front">
+                        <div class="dew colors">
+                          <img src="./img/icon0.png" alt="" />
+                        </div>
+                        <div class="desc">
+                          <h3>정보처리기사 필기(합격)</h3>
+                        </div>
+                      </div>
+                      <div class="back ver">
+                        <p>
+                          공부하는 내내 부족함을 느끼고 있던 기초 지식을
+                          습득하기 위해 정보처리기사 자격증 시험을 준비하고
+                          있습니다.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-horizontal">
+                      <div class="front">
+                        <div class="dew colors">
+                          <img src="./img/icon0.png" alt="" />
+                        </div>
+                        <div class="desc">
+                          <h3>LG 나는 배우다 프로젝트</h3>
+                        </div>
+                      </div>
+                      <div class="back hori">
+                        <p>
+                          직접 기회를 만들고 도전을 멈추지 않았기에 프로젝트에
+                          일원으로 참여할 수 있었습니다.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-vertical">
+                      <div class="front">
+                        <div class="dew colors">
+                          <img src="./img/icon0.png" alt="" />
+                        </div>
+                        <div class="desc">
+                          <h3>지하철 단편 영화 제작</h3>
+                        </div>
+                      </div>
+                      <div class="back ver">
+                        <p>
+                          혼자의 힘으로 많은 것을 이루어내면서 성취감이라는
+                          뿌뜻한 경험을 맛볼 수 있었습니다.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="img"></div>
-            <img
-              class="cloudAni"
-              src="./img/cloudanimation.png"
-              alt="cloudAnimation"
-            />
           </div>
         </div>
-        <div #id="about" class="section about">
-          <div class="container">
-            <span class="section-tit"
-              >It's me
-              <div class="underbar colors"></div>
-              <div class="inner colors"></div>
-            </span>
-            <div class="section-inner">
-              <ul>
-                <li>
-                  <div class="dew colors">
-                    <img src="./img/icon0.png" alt="" />
-                  </div>
-                  <div class="desc">
-                    <h3>국민대학교 신소재공학과 졸업</h3>
-                    <p>
-                      4년간의 대학생활을 통해 새로운 분야에 대한 탐구를 지속할
-                      수 있었습니다.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="dew colors">
-                    <img src="./img/icon0.png" alt="" />
-                  </div>
-                  <div class="desc">
-                    <h3>LG 나는 배우다 프로젝트</h3>
-                    <p>
-                      연기에 꿈을 갖고 난 후 처음으로 <br />
-                      도전했던 프로젝트를 성공적으로<br />
-                      마무리 하였습니다.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="dew colors">
-                    <img src="./img/icon0.png" alt="" />
-                  </div>
-                  <div class="desc">
-                    <h3>지하철 단편 영화 제작</h3>
-                    <p>
-                      꿈을 향해 한발짝 다가가기 위해 멈추지 않고 적극적으로 여러
-                      분야로의 도전을 이어나갔습니다.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="dew colors">
-                    <img src="./img/icon0.png" alt="" />
-                  </div>
-                  <div class="desc">
-                    <h3>단편영화 주인공 '지희'</h3>
-                    <p>
-                      여러 오디션 끝에 단편영화에 출연할 수 있게 되었고 그 후
-                      두편의 작품을 더 찍게 되었습니다.
-                    </p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+
         <div #id="skill" class="section skill">
           <div class="container">
             <span class="section-tit"
