--- a/profile/index.html
+++ b/profile/index.html
@@ -155,7 +155,60 @@
                 </ul>
               </div>
             </div>
-            <div class="img"></div>
+
+            <div class="profile">
+              <img
+                class="mian-profile"
+                src="./img/yiseul01.jpg"
+                alt="profile"
+              />
+              <div class="images">
+                <img
+                  class="image"
+                  data-index="0"
+                  data-status="inactive"
+                  src="./img/reading.jpg"
+                  alt="reading"
+                />
+                <img
+                  class="image"
+                  data-index="1"
+                  data-status="inactive"
+                  src="./img/skateboarding.jpg"
+                  alt="skateboarding"
+                />
+                <img
+                  class="image"
+                  data-index="2"
+                  data-status="inactive"
+                  src="./img/cooking.jpg"
+                  alt="cooking"
+                />
+
+                <img
+                  class="image"
+                  data-index="3"
+                  data-status="inactive"
+                  src="./img/backpaking.jpg"
+                  alt="backpaking"
+                />
+                <img
+                  class="image"
+                  data-index="4"
+                  data-status="inactive"
+                  src="./img/boxing.jpg"
+                  alt="boxing"
+                />
+                <img
+                  class="image"
+                  data-index="5"
+                  data-status="inactive"
+                  src="./img/watchingMovie.jpg"
+                  alt="watchingMovie"
+                />
+              </div>
+              <span>사진에 마우스를 올려보세요</span>
+            </div>
           </div>
         </div>
 
