--- a/profile/index.html
+++ b/profile/index.html
@@ -86,7 +86,10 @@
                           <img src="./img/icon0.png" alt="" />
                         </div>
                         <div class="desc">
-                          <h3>국민대학교 신소재공학과 졸업</h3>
+                          <h3>
+                            국민대학교 신소재공학과 <br />
+                            졸업
+                          </h3>
                         </div>
                       </div>
                       <div class="back hori">
@@ -104,7 +107,10 @@
                           <img src="./img/icon0.png" alt="" />
                         </div>
                         <div class="desc">
-                          <h3>정보처리기사 필기(합격)</h3>
+                          <h3>
+                            정보처리기사 <br />
+                            필기(합격)
+                          </h3>
                         </div>
                       </div>
                       <div class="back ver">
@@ -123,7 +129,10 @@
                           <img src="./img/icon0.png" alt="" />
                         </div>
                         <div class="desc">
-                          <h3>LG 나는 배우다 프로젝트</h3>
+                          <h3>
+                            LG 나는 배우다 <br />
+                            프로젝트 참여
+                          </h3>
                         </div>
                       </div>
                       <div class="back hori">
@@ -141,7 +150,10 @@
                           <img src="./img/icon0.png" alt="" />
                         </div>
                         <div class="desc">
-                          <h3>지하철 단편 영화 제작</h3>
+                          <h3>
+                            지하철 단편 영화 <br />
+                            제작
+                          </h3>
                         </div>
                       </div>
                       <div class="back ver">
@@ -162,7 +174,7 @@
                 src="./img/yiseul01.jpg"
                 alt="profile"
               />
-              <div class="images">
+              <div class="images" data-iam="Like it !">
                 <img
                   class="image"
                   data-index="0"
